Revision history for Data-Domain

1.09 21.04.2023
  - fix one special case of warning 'redundant' that was omitted in the 1.07 fix

1.08 10.03.2023
  - remove internal uses of smartmatch and 'when'
  - drop support for "~~" overloading if perl version >= 5.037
  - the -matches feature is now implemented through match::simple::XS
  - pod tests moved to xt

1.07 29.04.2020
  - fix warning 'redundant' appeared in perl 5.22 

1.06 05.04.2014
  - #94464 fix missing dependency on List::MoreUtils

1.05 04.08.2013
  - additional options -keys and -values for Struct

1.04 16.06.2013
  - use experimental 'smartmatch' to avoid warnings from perl 5.18 

1.03 01.12.2012
  - fixed definition of 'Class' and added new option "-package"

1.02 27.10.2012
  - better check of min/max values
  - revised documentation
  - new options :  -ref, -isweak, -readonly, -tainted
  - most options moved to parent inspect() -- now they apply to all domains
  - new domains : 'Nat', 'Handle'
  - new shortcuts : 'Regexp', 'Obj', 'Class', 'Ref', 'Unref'
  - changed names of export groups ('constructors' and 'shortcuts')
  - experimental support for checking method calls and coderef calls
  - added $MAX_DEEP to control the recursion level 

1.01 21.10.2012
  - removed internal domain _None (useless because same as 'Empty')
  - fiddle with Sub::Exporter to support use Data::Domain qw/:all !Date/   

1.00 11.10.2012
  - use Scalar::Does instead of UNIVERSAL::isa
  - new Whatever options : -blessed, -matches, -does
  - overloads stringification and smart match operators
  - use Sub::Exporter for exporting functions
  - exports builtin domains : True, False, Blessed, Defined, etc.
  - new domain generator 'All_of'
  - tests structured in subtests

0.16 11.08.2011
  - specify POD =encoding so that new Pod::Simple is happy

0.15 29.09.2011
  - https://rt.cpan.org/Ticket/Display.html?id=71188 (String accepts non-scalar)

0.14 01.07.2009
  - undef not allowed in Enum list

0.13 24.02.2009